...
@Composable
fun BeatLinkTopLogo() {
  Box(
      modifier = Modifier.fillMaxWidth().padding(end = 36.dp),
      contentAlignment = Alignment.Center) {
        Text(
            modifier = Modifier.testTag("appName"),
            text =
                buildAnnotatedString {
                  withStyle(style = SpanStyle(color = MaterialTheme.colorScheme.primary)) {
                    append("Beat")
                  }
                  withStyle(style = SpanStyle(color = PrimaryRed)) { append("Link") }
...
